@@ -64,8 +64,6 @@ skip? or deprecate?
 66. Test cnb002633747 - Jenom jedno isbn
 68. Test cnb001242078 - specialni formy, krouzkova vazba
 69. When publisher is not identified, add unknown + subject named as.
-70. Test cnb000080974 - ISSN u edice
-Pak by bylo fajn hledat edici podle ISSN
 71.
 
 Applied
@@ -121,4 +119,8 @@ OK [20230112] skim
 OK [20230505] skim
 
 67. Test cnb003565872 - Cyklus.
+OK [20241125] skim
+
+70. Test cnb000080974 - ISSN u edice
+Pak by bylo fajn hledat edici podle ISSN
 OK [20241125] skim
